--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,214 +5,236 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@android:color/white"
     tools:context="com.infovsn.homework.MainActivity">
 
     <ScrollView
         android:id="@+id/scrollView1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/background">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical" >
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="16dp">
 
-            <Button
-                android:id="@+id/button1"
+            <!-- Row 1 -->
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
-                android:text="@string/m1"
-                android:textColor="#795548"
-                android:background="@drawable/shape"
-                android:textSize="24sp"
-
-                />
-
-            <Button
-                android:id="@+id/button2"
+                android:orientation="horizontal"
+                android:layout_marginBottom="12dp">
+                <Button
+                    android:id="@+id/button1"
+                    android:layout_width="0dp"
+                    android:layout_height="56dp"
+                    android:layout_weight="1"
+                    android:text="@string/m1"
+                    android:textAllCaps="true"
+                    android:textColor="#3C3C3C"
+                    android:background="@drawable/btn_pink_bg"
+                    android:layout_marginEnd="8dp" />
+                <Button
+                    android:id="@+id/button2"
+                    android:layout_width="0dp"
+                    android:layout_height="56dp"
+                    android:layout_weight="1"
+                    android:text="@string/m2"
+                    android:textAllCaps="true"
+                    android:textColor="#3C3C3C"
+                    android:background="@drawable/btn_pink_bg"
+                    android:layout_marginStart="8dp" />
+            </LinearLayout>
+            <!-- Row 2 -->
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
-                android:text="@string/m2"
-                android:textColor="#795548"
-                android:background="@drawable/shape"
-                android:textSize="24sp"
-                />
-
-            <Button
-                android:id="@+id/button3"
+                android:orientation="horizontal"
+                android:layout_marginBottom="12dp">
+                <Button
+                    android:id="@+id/button3"
+                    android:layout_width="0dp"
+                    android:layout_height="56dp"
+                    android:layout_weight="1"
+                    android:text="@string/m3"
+                    android:textAllCaps="true"
+                    android:textColor="#3C3C3C"
+                    android:background="@drawable/btn_pink_bg"
+                    android:layout_marginEnd="8dp" />
+                <Button
+                    android:id="@+id/button4"
+                    android:layout_width="0dp"
+                    android:layout_height="56dp"
+                    android:layout_weight="1"
+                    android:text="@string/m4"
+                    android:textAllCaps="true"
+                    android:textColor="#3C3C3C"
+                    android:background="@drawable/btn_pink_bg"
+                    android:layout_marginStart="8dp" />
+            </LinearLayout>
+            <!-- Row 3 -->
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
-                android:text="@string/m3"
-                android:textColor="#795548"
-                android:background="@drawable/shape"
-                android:textSize="24sp" />
-
-            <Button
-                android:id="@+id/button4"
+                android:orientation="horizontal"
+                android:layout_marginBottom="12dp">
+                <Button
+                    android:id="@+id/button5"
+                    android:layout_width="0dp"
+                    android:layout_height="56dp"
+                    android:layout_weight="1"
+                    android:text="@string/m5"
+                    android:textAllCaps="true"
+                    android:textColor="#3C3C3C"
+                    android:background="@drawable/btn_pink_bg"
+                    android:layout_marginEnd="8dp" />
+                <Button
+                    android:id="@+id/button6"
+                    android:layout_width="0dp"
+                    android:layout_height="56dp"
+                    android:layout_weight="1"
+                    android:text="@string/m6"
+                    android:textAllCaps="true"
+                    android:textColor="#3C3C3C"
+                    android:background="@drawable/btn_pink_bg"
+                    android:layout_marginStart="8dp" />
+            </LinearLayout>
+            <!-- Row 4 -->
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
-                android:text="@string/m4"
-                android:textColor="#795548"
-                android:background="@drawable/shape"
-                android:textSize="24sp" />
-
-            <Button
-                android:id="@+id/button5"
+                android:orientation="horizontal"
+                android:layout_marginBottom="12dp">
+                <Button
+                    android:id="@+id/button16"
+                    android:layout_width="0dp"
+                    android:layout_height="56dp"
+                    android:layout_weight="1"
+                    android:text="@string/m7"
+                    android:textAllCaps="true"
+                    android:textColor="#3C3C3C"
+                    android:background="@drawable/btn_pink_bg"
+                    android:layout_marginEnd="8dp" />
+                <Button
+                    android:id="@+id/button7"
+                    android:layout_width="0dp"
+                    android:layout_height="56dp"
+                    android:layout_weight="1"
+                    android:text="@string/m8"
+                    android:textAllCaps="true"
+                    android:textColor="#3C3C3C"
+                    android:background="@drawable/btn_pink_bg"
+                    android:layout_marginStart="8dp" />
+            </LinearLayout>
+            <!-- Row 5 -->
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
-                android:text="@string/m5"
-                android:textColor="#795548"
-                android:background="@drawable/shape"
-                android:textSize="24sp" />
-
-            <Button
-                android:id="@+id/button6"
+                android:orientation="horizontal"
+                android:layout_marginBottom="12dp">
+                <Button
+                    android:id="@+id/button8"
+                    android:layout_width="0dp"
+                    android:layout_height="56dp"
+                    android:layout_weight="1"
+                    android:text="@string/m9"
+                    android:textAllCaps="true"
+                    android:textColor="#3C3C3C"
+                    android:background="@drawable/btn_pink_bg"
+                    android:layout_marginEnd="8dp" />
+                <Button
+                    android:id="@+id/button9"
+                    android:layout_width="0dp"
+                    android:layout_height="56dp"
+                    android:layout_weight="1"
+                    android:text="@string/m10"
+                    android:textAllCaps="true"
+                    android:textColor="#3C3C3C"
+                    android:background="@drawable/btn_pink_bg"
+                    android:layout_marginStart="8dp" />
+            </LinearLayout>
+            <!-- Row 6 -->
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
-                android:text="@string/m6"
-                android:textColor="#795548"
-                android:background="@drawable/shape"
-                android:textSize="24sp" />
-
-            <Button
-                android:id="@+id/button16"
+                android:orientation="horizontal"
+                android:layout_marginBottom="12dp">
+                <Button
+                    android:id="@+id/button10"
+                    android:layout_width="0dp"
+                    android:layout_height="56dp"
+                    android:layout_weight="1"
+                    android:text="@string/m11"
+                    android:textAllCaps="true"
+                    android:textColor="#3C3C3C"
+                    android:background="@drawable/btn_pink_bg"
+                    android:layout_marginEnd="8dp" />
+                <Button
+                    android:id="@+id/button11"
+                    android:layout_width="0dp"
+                    android:layout_height="56dp"
+                    android:layout_weight="1"
+                    android:text="@string/m12"
+                    android:textAllCaps="true"
+                    android:textColor="#3C3C3C"
+                    android:background="@drawable/btn_pink_bg"
+                    android:layout_marginStart="8dp" />
+            </LinearLayout>
+            <!-- Row 7 -->
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
-                android:text="@string/m7"
-                android:textColor="#795548"
-                android:background="@drawable/shape"
-                android:textSize="24sp" />
-
-            <Button
-                android:id="@+id/button7"
+                android:orientation="horizontal"
+                android:layout_marginBottom="12dp">
+                <Button
+                    android:id="@+id/button12"
+                    android:layout_width="0dp"
+                    android:layout_height="56dp"
+                    android:layout_weight="1"
+                    android:text="@string/m13"
+                    android:textAllCaps="true"
+                    android:textColor="#3C3C3C"
+                    android:background="@drawable/btn_pink_bg"
+                    android:layout_marginEnd="8dp" />
+                <Button
+                    android:id="@+id/button13"
+                    android:layout_width="0dp"
+                    android:layout_height="56dp"
+                    android:layout_weight="1"
+                    android:text="@string/m14"
+                    android:textAllCaps="true"
+                    android:textColor="#3C3C3C"
+                    android:background="@drawable/btn_pink_bg"
+                    android:layout_marginStart="8dp" />
+            </LinearLayout>
+            <!-- Row 8 -->
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
-                android:text="@string/m8"
-                android:textColor="#795548"
-                android:background="@drawable/shape"
-                android:textSize="24sp" />
-
-            <Button
-                android:id="@+id/button8"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
-                android:text="@string/m9"
-                android:textColor="#795548"
-                android:background="@drawable/shape"
-                android:textSize="24sp" />
-
-            <Button
-                android:id="@+id/button9"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
-                android:text="@string/m10"
-                android:textColor="#795548"
-                android:background="@drawable/shape"
-                android:textSize="24sp" />
-
-            <Button
-                android:id="@+id/button10"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
-                android:text="@string/m11"
-                android:textColor="#795548"
-                android:background="@drawable/shape"
-                android:textSize="24sp" />
-
-            <Button
-                android:id="@+id/button11"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
-                android:text="@string/m12"
-                android:textColor="#795548"
-                android:background="@drawable/shape"
-                android:textSize="24sp" />
-
-            <Button
-                android:id="@+id/button12"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
-                android:text="@string/m13"
-                android:textColor="#795548"
-                android:background="@drawable/shape"
-                android:textSize="24sp" />
-
-            <Button
-                android:id="@+id/button13"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
-                android:text="@string/m14"
-                android:textColor="#795548"
-                android:background="@drawable/shape"
-                android:textSize="24sp" />
-
-            <Button
-                android:id="@+id/button14"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
-                android:text="@string/m15"
-                android:textColor="#795548"
-                android:background="@drawable/shape"
-                android:textSize="24sp" />
-
-            <Button
-                android:id="@+id/button15"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
-                android:layout_marginBottom="4dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
-                android:text="@string/m16"
-                android:textColor="#795548"
-                android:background="@drawable/shape"
-                android:textSize="24sp" />
+                android:orientation="horizontal"
+                android:layout_marginBottom="12dp">
+                <Button
+                    android:id="@+id/button14"
+                    android:layout_width="0dp"
+                    android:layout_height="56dp"
+                    android:layout_weight="1"
+                    android:text="@string/m15"
+                    android:textAllCaps="true"
+                    android:textColor="#3C3C3C"
+                    android:background="@drawable/btn_pink_bg"
+                    android:layout_marginEnd="8dp" />
+                <Button
+                    android:id="@+id/button15"
+                    android:layout_width="0dp"
+                    android:layout_height="56dp"
+                    android:layout_weight="1"
+                    android:text="@string/m16"
+                    android:textAllCaps="true"
+                    android:textColor="#3C3C3C"
+                    android:background="@drawable/btn_pink_bg"
+                    android:layout_marginStart="8dp" />
+            </LinearLayout>
 
             <!-- AdMob Banner AdView -->
             <com.google.android.gms.ads.AdView
@@ -224,5 +246,4 @@
                 app:adUnitId="@string/banner_ad_unit_id" />
         </LinearLayout>
     </ScrollView>
-
 </LinearLayout>
