--- a/app/src/main/res/layout/activity_square.xml
+++ b/app/src/main/res/layout/activity_square.xml
@@ -3,6 +3,7 @@
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#424242"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -13,15 +14,20 @@
         android:id="@+id/tabl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="10dp"
-        android:textSize="28sp"
-        android:scrollbars = "vertical"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
+        android:layout_alignParentTop="true"
+        android:layout_above="@+id/first"
+        android:gravity="right|center_vertical|bottom"
+        android:padding="12dp"
+        android:paddingRight="20dp"
+        android:background="#FFFFFF"
         android:hint="@string/hintq"
         android:textColorHint="#3F51B5"
         android:textAlignment="center"
-        android:textColor="#000000"/>
+        android:textColor="#000000"
+        android:textSize="28sp"
+        android:scrollbars="vertical"
+        android:focusable="true"
+        android:focusableInTouchMode="true"/>
 
 
     <LinearLayout
@@ -226,16 +232,16 @@
                 android:layout_gravity="fill_vertical"
                 android:text="@string/equal12"
                 android:paddingBottom="5dp"
-                android:textStyle="italic"
+                android:textStyle="bold"
                 android:paddingTop="5dp"
                 android:textSize="24sp"
                 android:textColor="#FFFFFF"
-
-                android:background="#FF9800"
+                android:background="#424242"
+                android:elevation="4dp"
+                android:letterSpacing="0.1"
+                android:fontFamily="sans-serif-medium"
                 />
         </LinearLayout>
     </LinearLayout>
 
 </RelativeLayout>
-
-
