--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,16 +7,16 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowLightStatusBar">false</item>
         <item name="actionBarStyle">@style/RedActionBar</item>
-        <item name="colorControlNormal">@color/white</item> <!-- White icons for ActionBar -->
-        <item name="android:textColorPrimary">@android:color/black</item> <!-- Black text for content -->
-        <item name="android:homeAsUpIndicator">@drawable/ic_back_arrow_white</item> <!-- Ensure back button matches pasted_image_2.png -->
+        <item name="colorControlNormal">@color/white</item>
+        <item name="android:textColorPrimary">@android:color/black</item>
+        <item name="android:homeAsUpIndicator">@drawable/ic_back_arrow_white</item>
     </style>
 
     <!-- Custom ActionBar style applying red background and white title/icons -->
     <style name="RedActionBar" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
         <item name="background">@color/colorPrimary</item>
         <item name="titleTextStyle">@style/RedActionBarTitleText</item>
-        <item name="android:homeAsUpIndicator">@drawable/ic_back_arrow_white</item> <!-- Refined back button styling -->
+        <item name="android:homeAsUpIndicator">@drawable/ic_back_arrow_white</item>
         <item name="elevation">4dp</item>
     </style>
 
@@ -26,5 +26,64 @@
 
     <!-- Placeholder if later you want per-screen variants -->
     <style name="Theme.Addition" parent="AppTheme" />
+
+    <!-- Modern keypad button base style -->
+    <style name="KeypadButton" parent="Widget.AppCompat.Button">
+        <item name="android:layout_height">@dimen/keypad_button_height</item>
+        <item name="android:background">@drawable/keypad_button_bg</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:gravity">center</item>
+        <item name="android:minHeight">@dimen/keypad_button_height</item>
+        <item name="android:padding">0dp</item>
+        <item name="android:layout_margin">0dp</item>
+    </style>
+
+    <style name="KeypadButton.Equal">
+        <item name="android:textAllCaps">true</item>
+        <item name="android:letterSpacing">0.05</item>
+    </style>
+
+    <!-- Primary keypad button style for highlighted actions -->
+    <style name="KeypadButton.Primary" parent="KeypadButton">
+        <item name="android:background">@drawable/keypad_button_primary_bg</item>
+    </style>
+
+    <!-- Display Text style for top screen -->
+    <style name="DisplayText" parent="TextAppearance.AppCompat.Large">
+        <item name="android:textSize">30sp</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:padding">12dp</item>
+        <item name="android:gravity">end|bottom</item>
+        <item name="android:background">@drawable/display_bg</item>
+    </style>
+
+    <!-- Centered Display Text style for header fields -->
+    <style name="DisplayText.Center" parent="DisplayText">
+        <item name="android:gravity">center</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+
+    <!-- KeypadIconButton style for ImageButtons to ensure consistent background and sizing -->
+    <style name="KeypadIconButton" parent="KeypadButton">
+        <item name="android:padding">0dp</item>
+        <item name="android:scaleType">center</item>
+        <item name="android:adjustViewBounds">true</item>
+    </style>
+
+    <!-- Home menu button style for main menu buttons with modern design -->
+    <style name="HomeMenuButton" parent="Widget.AppCompat.Button">
+        <item name="android:layout_height">56dp</item>
+        <item name="android:background">@drawable/home_menu_button_bg</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:letterSpacing">0.05</item>
+        <item name="android:paddingLeft">12dp</item>
+        <item name="android:paddingRight">12dp</item>
+        <item name="android:elevation">2dp</item>
+    </style>
 
 </resources>
