--- a/app/src/main/res/drawable/home_menu_button_bg.xml
+++ b/app/src/main/res/drawable/home_menu_button_bg.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/colorAccent">
+    android:color="@color/menuButtonRipple">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorPrimary" />
-            <corners android:radius="12dp" />
+            <gradient
+                android:startColor="@color/menuButtonBgStart"
+                android:endColor="@color/menuButtonBgEnd"
+                android:angle="270" />
+            <corners android:radius="16dp" />
+            <stroke android:width="1dp" android:color="@color/menuButtonStroke" />
         </shape>
     </item>
 </ripple>
-
