--- a/app/src/main/res/drawable/keypad_button_bg.xml
+++ b/app/src/main/res/drawable/keypad_button_bg.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/colorAccent">
+    android:color="@color/keypadRipple">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/keypadButton" />
+            <gradient
+                android:startColor="@color/keypadButtonStart"
+                android:endColor="@color/keypadButtonEnd"
+                android:angle="270" />
             <corners android:radius="@dimen/keypad_corner_radius" />
+            <stroke android:width="1dp" android:color="@color/keypadButtonStroke" />
         </shape>
     </item>
 </ripple>
-
